src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__numeric__abs_numeric.snap
---
source: src/expr/src/scalar/func/impls/numeric.rs
expression: "#[sqlfunc(sqlname = \"abs\")]\nfn abs_numeric(mut a: Numeric) -> Numeric {\n    numeric::cx_datum().abs(&mut a);\n    a\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct AbsNumeric;
impl crate::func::EagerUnaryFunc for AbsNumeric {
    type Input<'a> = Numeric;
    type Output<'a> = Numeric;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        abs_numeric(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for AbsNumeric {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("abs")
    }
}
fn abs_numeric(mut a: Numeric) -> Numeric {
    numeric::cx_datum().abs(&mut a);
    a
}
