src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__numeric__cast_numeric_to_int16.snap
---
source: src/expr/src/scalar/func/impls/numeric.rs
expression: "#[sqlfunc(\n    sqlname = \"numeric_to_smallint\",\n    preserves_uniqueness = false,\n    inverse = to_unary!(super::CastInt16ToNumeric(None)),\n    is_monotone = true\n)]\npub fn cast_numeric_to_int16(mut a: Numeric) -> Result<i16, EvalError> {\n    let mut cx = numeric::cx_datum();\n    cx.round(&mut a);\n    cx.clear_status();\n    let i = cx\n        .try_into_i32(a)\n        .or_else(|_| Err(EvalError::Int16OutOfRange(a.to_string().into())))?;\n    i16::try_from(i).or_else(|_| Err(EvalError::Int16OutOfRange(i.to_string().into())))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct CastNumericToInt16;
impl crate::func::EagerUnaryFunc for CastNumericToInt16 {
    type Input<'a> = Numeric;
    type Output<'a> = Result<i16, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_numeric_to_int16(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastInt16ToNumeric(None))
    }
    fn is_monotone(&self) -> bool {
        true
    }
    fn preserves_uniqueness(&self) -> bool {
        false
    }
}
impl std::fmt::Display for CastNumericToInt16 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("numeric_to_smallint")
    }
}
pub fn cast_numeric_to_int16(mut a: Numeric) -> Result<i16, EvalError> {
    let mut cx = numeric::cx_datum();
    cx.round(&mut a);
    cx.clear_status();
    let i = cx
        .try_into_i32(a)
        .or_else(|_| Err(EvalError::Int16OutOfRange(a.to_string().into())))?;
    i16::try_from(i).or_else(|_| Err(EvalError::Int16OutOfRange(i.to_string().into())))
}
