src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__numeric__cast_numeric_to_uint16.snap
---
source: src/expr/src/scalar/func/impls/numeric.rs
expression: "#[sqlfunc(\n    sqlname = \"numeric_to_uint2\",\n    preserves_uniqueness = false,\n    inverse = to_unary!(super::CastUint16ToNumeric(None)),\n    is_monotone = true\n)]\nfn cast_numeric_to_uint16(mut a: Numeric) -> Result<u16, EvalError> {\n    let mut cx = numeric::cx_datum();\n    cx.round(&mut a);\n    cx.clear_status();\n    let u = cx\n        .try_into_u32(a)\n        .or_else(|_| Err(EvalError::UInt16OutOfRange(a.to_string().into())))?;\n    u16::try_from(u).or_else(|_| Err(EvalError::UInt16OutOfRange(u.to_string().into())))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct CastNumericToUint16;
impl crate::func::EagerUnaryFunc for CastNumericToUint16 {
    type Input<'a> = Numeric;
    type Output<'a> = Result<u16, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_numeric_to_uint16(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastUint16ToNumeric(None))
    }
    fn is_monotone(&self) -> bool {
        true
    }
    fn preserves_uniqueness(&self) -> bool {
        false
    }
}
impl std::fmt::Display for CastNumericToUint16 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("numeric_to_uint2")
    }
}
fn cast_numeric_to_uint16(mut a: Numeric) -> Result<u16, EvalError> {
    let mut cx = numeric::cx_datum();
    cx.round(&mut a);
    cx.clear_status();
    let u = cx
        .try_into_u32(a)
        .or_else(|_| Err(EvalError::UInt16OutOfRange(a.to_string().into())))?;
    u16::try_from(u).or_else(|_| Err(EvalError::UInt16OutOfRange(u.to_string().into())))
}
